--- a/HamiltonTevin_ECommerce/app/src/main/res/layout/product_item.xml
+++ b/HamiltonTevin_ECommerce/app/src/main/res/layout/product_item.xml
@@ -63,7 +63,6 @@
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="8dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="@color/design_default_color_primary" />
+        android:background="@color/purple_500" />
 
 </LinearLayout>
