--- a/HamiltonTevin_ECommerce/app/src/main/res/navigation/nav_graph.xml
+++ b/HamiltonTevin_ECommerce/app/src/main/res/navigation/nav_graph.xml
@@ -3,25 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/productFragment">
+    app:startDestination="@+id/nav_home">
 
     <fragment
-        android:id="@+id/productFragment"
+        android:id="@+id/nav_home"
         android:name="com.example.hamiltontevin_ecommerce.fragments.ProductFragment"
         android:label="ProductFragment"
         tools:layout="@layout/product_fragment">
-        <action
-            android:id="@+id/action_productFragment_to_productDetail"
-            app:destination="@id/productDetail" />
     </fragment>
     <fragment
-        android:id="@+id/cartFragment"
+        android:id="@+id/nav_cart"
         android:name="com.example.hamiltontevin_ecommerce.fragments.ProductFragment"
         android:label="CartFragment"
         tools:layout="@layout/cart_fragment"
         />
     <fragment
-        android:id="@+id/accountFragment"
+        android:id="@+id/nav_person"
         android:name="com.example.hamiltontevin_ecommerce.fragments.ProductFragment"
         android:label="accountFragment"
         tools:layout="@layout/account_fragment"
