--- a/HamiltonTevin_ECommerce/app/src/main/res/navigation/nav_graph.xml
+++ b/HamiltonTevin_ECommerce/app/src/main/res/navigation/nav_graph.xml
@@ -9,8 +9,8 @@
         android:id="@+id/nav_home"
         android:name="com.example.hamiltontevin_ecommerce.fragments.ProductFragment"
         android:label="ProductFragment"
-        tools:layout="@layout/product_fragment">
-    </fragment>
+        tools:layout="@layout/product_fragment"
+        />
     <fragment
         android:id="@+id/nav_cart"
         android:name="com.example.hamiltontevin_ecommerce.fragments.ProductFragment"
